Added classes for loginUser and transaction_prepare
