# BackEnd/swagger_server/swagger/swagger.yaml
@@ -68,11 +68,11 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
-        name: "body"
+        name: "TransactionPrepare"
         description: "The transaction to create."
         required: true
         schema:
-          $ref: "#/definitions/body"
+          $ref: "#/definitions/TransactionPrepare"
       responses:
         "200":
           description: "successful operation"
@@ -169,7 +169,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
-        name: "body"
+        name: "User"
         description: "Created user object"
         required: true
         schema:
@@ -191,11 +191,11 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
-        name: "user"
-        description: "The user to create."
+        name: "LoginUser"
+        description: "Created user object"
         required: true
         schema:
-          $ref: "#/definitions/user"
+          $ref: "#/definitions/LoginUser"
       responses:
         "200":
           description: "The response"
@@ -273,7 +273,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
-        name: "body"
+        name: "Settings"
         description: "Created settings object"
         required: true
         schema:
@@ -324,6 +324,19 @@ definitions:
       id: 0
       wkn: "wkn"
       userId: 6
+  TransactionPrepare:
+    type: "object"
+    properties:
+      wkn:
+        type: "string"
+      amount:
+        type: "integer"
+        format: "int32"
+      transactionType:
+        type: "string"
+        enum:
+        - "buy"
+        - "sell"
   StockInfo:
     type: "object"
     properties:
@@ -432,13 +445,15 @@ definitions:
       moneyAvailable:
         type: "number"
         format: "float"
+  LoginUser:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+      password:
+        type: "string"
     example:
-      firstName: "firstName"
-      lastName: "lastName"
-      moneyAvailable: 1.4658129
       password: "password"
-      id: 0
-      startingCapital: 6.0274563
       email: "email"
   Settings:
     type: "object"
@@ -472,29 +487,6 @@ definitions:
       type:
         type: "string"
       message:
-        type: "string"
-  body:
-    type: "object"
-    properties:
-      wkn:
-        type: "string"
-      amount:
-        type: "integer"
-        format: "int32"
-      transactionType:
-        type: "string"
-        format: "enum"
-        enum:
-        - "buy"
-        - "sell"
-  user:
-    type: "object"
-    required:
-    - "password"
-    properties:
-      email:
-        type: "string"
-      password:
         type: "string"
 externalDocs:
   description: "Find out more about Swagger"
